--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@
 body {
     display: grid;
     place-content: center;
+    min-height: 100vh;
 }
   
-.content {
+main {
     display: grid;
     gap: 1rem;
     padding: 1.5rem;
